<resources>
    <string name="app_name">A2L1_AndroidMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="add_more">Add more</string>
    <string name="another_settings">Another settings</string>
    <string name="element_number">Элемент номер</string>
</resources>
