<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add"
        android:title="@string/add"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/menu_clear"
        android:title="@string/clear"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/menu_more"
        android:title="@string/more"
        android:orderInCategory="5"
        android:visible="true">

        <menu>
            <item android:title="@string/add_more"/>
            <item android:title="@string/another_settings"/>
        </menu>

    </item>

</menu>
